More updates for the STM32F3Discovery
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5617 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/examples/cdcacm/Kconfig
+++ b/apps/examples/cdcacm/Kconfig
@@ -4,7 +4,7 @@
 #
 
 config EXAMPLES_CDCACM
-	bool "CAN example"
+	bool "CDC/ACM example"
 	default n
 	---help---
 		Enable the USB CDC/ACM class driver example
