Fix some problems with the vfork() test on the STM32F3Discovery
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5628 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/examples/ostest/Makefile
+++ b/apps/examples/ostest/Makefile
@@ -89,7 +89,9 @@ CSRCS		+= posixtimer.c
 endif
 
 ifeq ($(CONFIG_ARCH_HAVE_VFORK),y)
+ifeq ($(CONFIG_SCHED_WAITPID),y)
 CSRCS		+= vfork.c
+endif
 endif
 
 ifneq ($(CONFIG_DISABLE_SIGNALS),y)
