Minor changes to make OS test more robust in the presence of many memory allocation failures
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5672 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/Kconfig
+++ b/apps/Kconfig
@@ -19,7 +19,7 @@ menu "Network Utilities"
 source "$APPSDIR/netutils/Kconfig"
 endmenu
 
-menu "ModBus"
+menu "FreeModBus"
 source "$APPSDIR/modbus/Kconfig"
 endmenu
 
