Add a THTTPD configuratin for zkit-arm-1769
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5675 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/examples/thttpd/Kconfig
+++ b/apps/examples/thttpd/Kconfig
@@ -10,4 +10,20 @@ config EXAMPLES_THTTPD
 		Enable the THTTPD web server example
 
 if EXAMPLES_THTTPD
+
+config EXAMPLES_THTTPD_NOMAC
+	bool "Use Canned MAC Address"
+	default n
+	---help---
+		May be defined to use a hard-coded, software assigned MAC of
+		00:0e:de:ad:be:ef
+
+config EXAMPLES_THTTPD_DRIPADDR
+	hex "Default Router IP address (Gateway)"
+	default 0x0a000001
+
+config EXAMPLES_THTTPD_NETMASK
+	hex "Network Mask"
+	default 0xffffff00
+
 endif
