Add an NX/TIFF screenshot from Petteri Aimonen (Patch 0014)
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5690 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/Kconfig
+++ b/apps/Kconfig
@@ -11,6 +11,10 @@ menu "Examples"
 source "$APPSDIR/examples/Kconfig"
 endmenu
 
+menu "Graphics Support"
+source "$APPSDIR/graphics/Kconfig"
+endmenu
+
 menu "Interpreters"
 source "$APPSDIR/interpreters/Kconfig"
 endmenu
