--- a/apps/graphics/Kconfig
+++ b/apps/graphics/Kconfig
@@ -4,10 +4,15 @@
 #
 
 config TIFF
-	bool "TIFF file generation utility"
+	bool "TIFF file generation library"
 	default n
 	---help---
 		Enable support for the TIFF file generation program.
 
 if TIFF
+
+menu "TIFF Screenshot Utility"
+source "$APPSDIR/graphics/screenshot/Kconfig"
+endmenu
+
 endif
