Two fixes from Mike Smith: (1) use -m install of --mode in install commands, (2) fix typo in stm32_exti.h introduced with the STM32 F3 port
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5701 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/examples/posix_spawn/filesystem/redirect/Makefile
+++ b/apps/examples/posix_spawn/filesystem/redirect/Makefile
@@ -56,4 +56,4 @@ clean:
 
 install:
 	$(Q) mkdir -p $(ROMFS_DIR)
-	$(Q) install --mode=0755 $(BIN) $(ROMFS_DIR)/$(BIN)
+	$(Q) install -m 0755 $(BIN) $(ROMFS_DIR)/$(BIN)
