Add apps/system/ramtest.  I will use this for the LPC1788 SDRAM bringup
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5791 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/system/Kconfig
+++ b/apps/system/Kconfig
@@ -15,6 +15,10 @@ menu "FLASH Program Installation"
 source "$APPSDIR/system/install/Kconfig"
 endmenu
 
+menu "RAM Test"
+source "$APPSDIR/system/ramtest/Kconfig"
+endmenu
+
 menu "readline()"
 source "$APPSDIR/system/readline/Kconfig"
 endmenu
