Misc fixes to get SDRAM support and RAM test to build for the Open1788 platform
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5793 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/system/Makefile
+++ b/apps/system/Makefile
@@ -37,7 +37,8 @@
 
 # Sub-directories containing system task
 
-SUBDIRS = free i2c install readline poweroff ramtron sdcard sysinfo usbmonitor
+SUBDIRS  = free i2c install readline poweroff ramtest ramtron sdcard
+SUBDIRS += sysinfo usbmonitor
 
 # Create the list of installed runtime modules (INSTALLED_DIRS)
 
