--- a/apps/examples/touchscreen/Kconfig
+++ b/apps/examples/touchscreen/Kconfig
@@ -10,4 +10,39 @@ config EXAMPLES_TOUCHSCREEN
 		Enable the touchscreen example
 
 if EXAMPLES_TOUCHSCREEN
+
+config EXAMPLES_TOUCHSCREEN_BUILTIN
+	bool "NSH built-in application"
+	default y
+	depends on NSH_BUILTIN_APPS
+	---help---
+		Build the touchscreen test as an NSH built-in function.  Default:
+		Built as a standalone problem unless NSH_BUILTIN_APPS is defined.
+		Then the default is to build as an NSH built-in application.
+
+config EXAMPLES_TOUCHSCREEN_MINOR
+	int "Touchscreen minor device number"
+	default 0
+	---help---
+		The minor device number.  Minor=N corresponds to touchscreen device
+		/dev/input0.  Note this value must with EXAMPLES_TOUCHSCREEN_DEVPATH.
+		Default 0.
+
+config EXAMPLES_TOUCHSCREEN_DEVPATH
+	string "Touchscreen device path"
+	default "/dev/input0"
+	---help---
+		The path to the touchscreen device.  This must be consistent with
+		EXAMPLES_TOUCHSCREEN_MINOR. Default: "/dev/input0"
+
+config EXAMPLES_TOUCHSCREEN_NSAMPLES
+	int "Number of samples"
+	default 0
+	depends on !EXAMPLES_TOUCHSCREEN_BUILTIN
+	---help---
+		If EXAMPLES_TOUCHSCREEN_BUILTIN is defined, then the number of
+		samples is provided on the command line and this value is ignored.
+		Otherwise, this number of samples is collected and the program
+		terminates.  Default:  Zero (Samples are collected indefinitely).
+
 endif
