SSP driver fixes for the LPC178x; Fixes for Open1788 touchscreen driver
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5812 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/examples/touchscreen/Kconfig
+++ b/apps/examples/touchscreen/Kconfig
@@ -25,7 +25,7 @@ config EXAMPLES_TOUCHSCREEN_MINOR
 	default 0
 	---help---
 		The minor device number.  Minor=N corresponds to touchscreen device
-		/dev/input0.  Note this value must with EXAMPLES_TOUCHSCREEN_DEVPATH.
+		/dev/inputN.  Note this value must with EXAMPLES_TOUCHSCREEN_DEVPATH.
 		Default 0.
 
 config EXAMPLES_TOUCHSCREEN_DEVPATH
