Mostly updates and corrections to .gitignore files
Conflicts:
	.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,15 @@ mavlink/include/mavlink/v0.9/
 core
 .gdbinit
 mkdeps
+.depend
+Make.dep
+*.o
+*.a
+*.d
+*.i
+*~
+.swp
+.*.swp
+core
+.gdbinit
+cscope.out
