--- a/apps/netutils/.gitignore
+++ b/apps/netutils/.gitignore
@@ -1,12 +1,11 @@
-Make.dep
-Make.str
-.depend
-.strings
-http_*.c
-smtp_*.c
-netutil-strings.h
-makestrings
-*.swp
+/Make.dep
+/Make.str
+/.depend
+/.strings
+/http_*.c
+/smtp_*.c
+/netutil-strings.h
+/makestrings
 *.asm
 *.rel
 *.lst
@@ -14,4 +13,3 @@ makestrings
 *.adb
 *.lib
 *.src
-
