Move LPC17xx IOCON register definitions from lpc17_gpio.h to lpc17_iocon.h; fix a few more .gitignore files

--- a/apps/examples/elf/tests/.gitignore
+++ b/apps/examples/elf/tests/.gitignore
@@ -1,10 +1,7 @@
-romfs
-romfs.h
-romfs.img
-dirlist.h
-symtab.c
-varlist.tmp
-
-
-
+/romfs
+/romfs.h
+/romfs.img
+/dirlist.h
+/symtab.c
+/varlist.tmp
 
