Various Kconfig files still have references to CONFIG_ variables.  Some in harmless comments, some in config definionts which is not harmless.  All removed

--- a/apps/examples/usbstorage/Kconfig
+++ b/apps/examples/usbstorage/Kconfig
@@ -90,7 +90,7 @@ config EXAMPLES_USBMSC_TRACEINIT
 	default n
 	depends on EXAMPLES_USBMSC
 	---help---
-		If USBDEV_TRACE is enabled (or CONFIG_DEBUG and CONFIG_DEBUG_USB),
+		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB initialization events
@@ -100,7 +100,7 @@ config EXAMPLES_USBMSC_TRACECLASS
 	default n
 	depends on EXAMPLES_USBMSC
 	---help---
-		If USBDEV_TRACE is enabled (or CONFIG_DEBUG and CONFIG_DEBUG_USB),
+		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB class driver events
@@ -110,7 +110,7 @@ config EXAMPLES_USBMSC_TRACETRANSFERS
 	default n
 	depends on EXAMPLES_USBMSC
 	---help---
-		If USBDEV_TRACE is enabled (or CONFIG_DEBUG and CONFIG_DEBUG_USB),
+		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB data transfer events
@@ -120,7 +120,7 @@ config EXAMPLES_USBMSC_TRACECONTROLLER
 	default n
 	depends on EXAMPLES_USBMSC
 	---help---
-		If USBDEV_TRACE is enabled (or CONFIG_DEBUG and CONFIG_DEBUG_USB),
+		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB device controller events
@@ -130,7 +130,7 @@ config EXAMPLES_USBMSC_TRACEINTERRUPTS
 	default n
 	depends on EXAMPLES_USBMSC
 	---help---
-		If USBDEV_TRACE is enabled (or CONFIG_DEBUG and CONFIG_DEBUG_USB),
+		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB device controller interrupt-related events.
