--- a/apps/examples/pwm/Kconfig
+++ b/apps/examples/pwm/Kconfig
@@ -35,14 +35,14 @@ config EXAMPLES_PWM_DURATION
 	default 5 if !EXAMPLES_PWM_PULSECOUNT
 	---help---
 		The default PWM pulse train duration in seconds.  Used only if the current
-		pulse count is zero (pulse countis only supported if CONFIG_PWM_PULSECOUNT
+		pulse count is zero (pulse countis only supported if PWM_PULSECOUNT
 		is defined). Default: 5 seconds
 
 config EXAMPLES_PWM_PULSECOUNT
 	int "Default pulse count"
 	default 0
 	---help---
-	The initial PWM pulse count.  This option is only available if CONFIG_PWM_PULSECOUNT
+	The initial PWM pulse count.  This option is only available if PWM_PULSECOUNT
 	is nonzero. Default: 0 (i.e., use the duration, not the count).
 
 endif
