Fixes to also work with the Olimex ARM-USB-OCD-H

--- a/Debug/stm32f4x.cfg
+++ b/Debug/stm32f4x.cfg
@@ -28,6 +28,9 @@ if { [info exists WORKAREASIZE] } {
 # that there can be a pretty wide band where things are more or less stable.
 jtag_khz 1000
 
+# Needed for olimex ARM-USB-OCD-H - I think it should be fine on other adapters as well 
+reset_config trst_and_srst
+
 jtag_nsrst_delay 100
 jtag_ntrst_delay 100
 
