Add scripts for debugging with openocd

--- a/Debug/stm32f4x.cfg
+++ b/Debug/stm32f4x.cfg
@@ -26,13 +26,13 @@ if { [info exists WORKAREASIZE] } {
 # bit more to be on the safe side. Perhaps superstition, but if are
 # running off a crystal, we can run closer to the limit. Note
 # that there can be a pretty wide band where things are more or less stable.
-jtag_khz 1000
+adapter_khz 1000
 
 # Needed for olimex ARM-USB-OCD-H - I think it should be fine on other adapters as well 
 reset_config trst_and_srst
 
-jtag_nsrst_delay 100
-jtag_ntrst_delay 100
+adapter_nsrst_delay 100
+# jtag_ntrst_delay 100
 
 #jtag scan chain
 if { [info exists CPUTAPID ] } {
@@ -55,13 +55,21 @@ if { [info exists BSTAPID ] } {
 jtag newtap $_CHIPNAME bs -irlen 5 -expected-id $_BSTAPID
 
 set _TARGETNAME $_CHIPNAME.cpu
-target create $_TARGETNAME cortex_m3 -endian $_ENDIAN -chain-position $_TARGETNAME -rtos auto
+target create $_TARGETNAME cortex_m -endian $_ENDIAN -chain-position $_TARGETNAME -rtos auto
 
 $_TARGETNAME configure -work-area-phys 0x20000000 -work-area-size $_WORKAREASIZE -work-area-backup 0
 
 set _FLASHNAME $_CHIPNAME.flash
 flash bank $_FLASHNAME stm32f2x 0 0 0 0 $_TARGETNAME
 
+# needed for px4
+reset_config trst_only
+
+# FIXME - needed to init periphs on reset
+# 0x40023800 RCC base
+# 0x24 RCC_APB2 0x75933
+# RCC_APB2 0
+
 # if srst is not fitted use SYSRESETREQ to
 # perform a soft reset
-cortex_m3 reset_config sysresetreq
+cortex_m reset_config sysresetreq
