--- a/Debug/stm32f4x.cfg
+++ b/Debug/stm32f4x.cfg
@@ -65,11 +65,25 @@ flash bank $_FLASHNAME stm32f2x 0 0 0 0 $_TARGETNAME
 # needed for px4
 reset_config trst_only
 
+proc stm32_reset {} {
+  reset halt
 # FIXME - needed to init periphs on reset
 # 0x40023800 RCC base
 # 0x24 RCC_APB2 0x75933
 # RCC_APB2 0
+}
+
+# perform init that is required on each connection to the target
+proc stm32_init {} {
+
+  # force jtag to not shutdown during sleep
+  #uint32_t cr = getreg32(STM32_DBGMCU_CR);
+  #cr |= DBGMCU_CR_STANDBY | DBGMCU_CR_STOP | DBGMCU_CR_SLEEP;
+  #putreg32(cr, STM32_DBGMCU_CR);
+  mww 0xe0042004 00000007
+}
 
 # if srst is not fitted use SYSRESETREQ to
 # perform a soft reset
 cortex_m reset_config sysresetreq
+
