--- a/Debug/px4fmu-v1-board.cfg
+++ b/Debug/px4fmu-v1-board.cfg
@@ -30,3 +30,9 @@ proc stm32_init {} {
 # perform a soft reset
 cortex_m reset_config sysresetreq
 
+# Let GDB directly program elf binaries
+gdb_memory_map enable
+
+# doesn't work yet
+gdb_flash_program disable
+
